--- a/tmux/tmux-keybindings.conf
+++ b/tmux/tmux-keybindings.conf
@@ -1,7 +1,7 @@
 # Prefix
 unbind C-b
-set -g prefix `
-bind ` send-prefix
+set -g prefix   C-a
+bind            C-a   send-prefix
 
 # New window
 unbind '"'
@@ -9,6 +9,10 @@ unbind %
 bind '"' split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+
+# Rotate window
+bind -r         Tab   next-window
 
 # Easy Config Reloads
 bind r source-file ~/.tmux.conf
