--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -sel clip -i"
 set-option -g allow-rename off
 
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+set -g mouse off
 
 # http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 ######################
@@ -58,6 +58,7 @@ set-option -g visual-bell off
 set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
+set-option -g history-limit 50000
 
 set -g default-terminal "screen-256color"
 
@@ -109,3 +110,4 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
